test parrallel tests runs
Signed-off-by: Olivier Lamy <olamy@apache.org>